# bsb-bible-toolkit

./: .gitignore  AGENTS.md  LICENSE  NOTICE  PLAN_PODCAST.md  README.md  add_route_links.py  change_font.py  customize_bsb.py  customize_epub.py  design_bsb.py  download_bsb.py  generate_reflow_pdf.py  generate_typst_pdf.py  pyproject.toml  replit.md  requirements.txt  setup.py  smoke_test.py
.agents/: agent_assets_metadata.toml
.agents/memory/: MEMORY.md  single-column-source.md  smoke-test-preference.md  usfm-verse1-destinations.md
.github/workflows/: deliver-assets.yml
drafts/primary/: README.md
examples/tts/: README.md
fonts/: OFL.txt
reader/: editions.json  index.html
scripts/: build_osis_page_index.py  build_tts_asset_manifest.py  generate_elevenlabs_audio.py  generate_podcast_rss.py  generate_tts_demo.py  get_elevenlabs_token.sh  mlx_tts.py  prebuild_mlx_tts_assets.py  upload_elevenlabs.py  upload_youtube.py
scripts/tui/: go.mod  main.go
src/bsb_pdf_toolkit/: __init__.py  add_route_links.py  change_font.py  compare_renders.py  design.py  extract_bsb.py  generate_reflow_pdf.py  generate_typst_pdf.py  smoke_test.py  stamp_release_stage.py  verify_artifacts.py
